fix overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,6 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
   min-height: 100%;
-  overflow-x: hidden;
 }
 
 a,
